// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button: should render and be a part of the list 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#141414",
      "borderColor": "#3B8E94",
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexBasis": 0,
      "flexGrow": 1,
      "flexShrink": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 12,
    }
  }
  testID="button"
>
  <Text
    disabled={false}
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 28,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Button: should render and be disabled 1`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#141414",
      "borderColor": "#3B8E94",
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 12,
    }
  }
  testID="button"
>
  <Text
    disabled={true}
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 28,
          "opacity": 0.5,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;

exports[`Button: should render and not be disabled 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#141414",
      "borderColor": "#3B8E94",
      "borderStyle": "solid",
      "borderWidth": 1,
      "justifyContent": "center",
      "opacity": 1,
      "paddingBottom": 12,
      "paddingLeft": 8,
      "paddingRight": 8,
      "paddingTop": 12,
    }
  }
  testID="button"
>
  <Text
    disabled={false}
    style={
      [
        {
          "color": "#ffffff",
          "fontSize": 28,
        },
      ]
    }
  >
    test
  </Text>
</View>
`;
